TODO
* add libcpath_codepage.h and codepage functions
* complete full path functions
  - implement libbfio_path_get_full_path_wide
  - POSIX: add support for absolute paths with x/../y
* update include header
* update man page
* add tests
* add msvscpp, borlandc5 and codegear files

20120507
* email and project site change

20120425
* fixes for pkg-config detection of libraries

20120409
* updated dependencies

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* added error functions

20120405
* Worked on include header

20120403
* Worked on stand-alone version
