@@ -35,11 +35,11 @@
  */
 #else
 
-#define LIBCPATH_VERSION			20120507
+#define LIBCPATH_VERSION			20120630
 
 /* The libcstring version string
  */
-#define LIBCPATH_VERSION_STRING			"20120507"
+#define LIBCPATH_VERSION_STRING			"20120630"
 
 #if defined( WINAPI )
 #define LIBCPATH_SEPARATOR			'\\'
