@@ -68,15 +68,19 @@ int libcpath_path_make_directory(
      libcerror_error_t **error );
 
 LIBCPATH_EXTERN \
-int libcpath_path_sanitize(
-     char *path,
-     size_t *path_size,
+int libcpath_path_get_sanitized_path(
+     const char *path,
+     size_t path_size,
+     char **sanitized_path,
+     size_t *sanitized_path_size,
      libcerror_error_t **error );
 
 LIBCPATH_EXTERN \
-int libcpath_path_sanitize_filename(
-     char *filename,
+int libcpath_path_get_sanitized_filename(
+     const char *filename,
      size_t *filename_size,
+     char **sanitized_filename,
+     size_t *sanitized_filename_size,
      libcerror_error_t **error );
 
 #if defined( HAVE_WIDE_CHARACTER_TYPE )
@@ -116,15 +120,19 @@ int libcpath_path_make_directory_wide(
      libcerror_error_t **error );
 
 LIBCPATH_EXTERN \
-int libcpath_path_sanitize_wide(
-     wchar_t *path,
-     size_t *path_size,
+int libcpath_path_get_sanitized_path_wide(
+     const wchar_t *path,
+     size_t path_size,
+     wchar_t **sanitized_path,
+     size_t *sanitized_path_size,
      libcerror_error_t **error );
 
 LIBCPATH_EXTERN \
-int libcpath_path_sanitize_filename_wide(
-     wchar_t *filename,
+int libcpath_path_get_sanitized_filename_wide(
+     const wchar_t *filename,
      size_t *filename_size,
+     wchar_t **sanitized_filename,
+     size_t *sanitized_filename_size,
      libcerror_error_t **error );
 
 #endif /* defined( HAVE_WIDE_CHARACTER_TYPE ) */
