@@ -1,6 +1,6 @@
 dnl Functions for libuna
 dnl
-dnl Version: 20120501
+dnl Version: 20120630
 
 dnl Function to detect if libuna is available as library
 dnl ac_libuna_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -69,6 +69,11 @@ AC_DEFUN([AX_LIBUNA_CHECK_LIB],
      libuna_base16_stream_copy_from_byte_stream,
      [ac_cv_libuna_dummy=yes],
      [ac_cv_libuna=no])
+    AC_CHECK_LIB(
+     una,
+     libuna_base16_stream_with_index_copy_from_byte_stream,
+     [ac_cv_libuna_dummy=yes],
+     [ac_cv_libuna=no])
  
     dnl Base32 stream functions
     AC_CHECK_LIB(
@@ -112,6 +117,11 @@ AC_DEFUN([AX_LIBUNA_CHECK_LIB],
      libuna_base32_stream_copy_from_byte_stream,
      [ac_cv_libuna_dummy=yes],
      [ac_cv_libuna=no])
+    AC_CHECK_LIB(
+     una,
+     libuna_base32_stream_with_index_copy_from_byte_stream,
+     [ac_cv_libuna_dummy=yes],
+     [ac_cv_libuna=no])
  
     dnl Base64 stream functions
     AC_CHECK_LIB(
@@ -153,6 +163,11 @@ AC_DEFUN([AX_LIBUNA_CHECK_LIB],
     AC_CHECK_LIB(
      una,
      libuna_base64_stream_copy_from_byte_stream,
+     [ac_cv_libuna_dummy=yes],
+     [ac_cv_libuna=no])
+    AC_CHECK_LIB(
+     una,
+     libuna_base64_stream_with_index_copy_from_byte_stream,
      [ac_cv_libuna_dummy=yes],
      [ac_cv_libuna=no])
  
